# tit

./: .gitignore  .goreleaser.yaml  .nvim-standalone-config  13-COUNSELOR-DIALOG-BACKGROUND-KICKOFF.md  14-COUNSELOR-SHORTCUT-LABEL-KICKOFF.md  4-ENGINEER-Address-AUDITOR-Findings.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_ANALYSIS_SUMMARY.txt  ARCHITECTURE_INDEX.md  AUDIT-INDEX.md  AUDIT-QUICK-REFERENCE.md  AUDIT-SUMMARY.md  AUDIT-SUMMARY.txt  Autumn.txt  CAROL.md  CHUNK-6-NAMING-AUDIT-PLAN.md  CLARIFICATIONS-APPROVED.md  CLAUDE.md  CMakeLists.txt  CODEBASE-AUDIT-REPORT.md  CODEBASE-MAP.md  CODEBASE-REFACTORING-AUDIT.md  COLORS.md  CONFLICT-RESOLVER-CLEANUP.md  CONFLICT-RESOLVER-PULL-TESTS.md  CONFLICT_RESOLVER_BEHAVIOR.md  CONFLICT_RESOLVER_FINAL.md  CONFLICT_RESOLVER_PORT.md  CONFLICT_RESOLVER_UPDATES.md  DIRTY-PULL-AUDIT.md  DIRTY-PULL-FILES-CREATED.md  DIRTY-PULL-IMPLEMENTATION.md  DIRTY-PULL-NEXT-PHASES.md  DIRTY-PULL-QUICK-REF.md  DIRTY-PULL-SESSION-SUMMARY.md  FLOW-TESTING-CHECKLIST.md  GIT-ENVIRONMENT-SETUP-IMPLEMENTATION-SUMMARY.md  GIT-ENVIRONMENT-SETUP-PLAN.md  HISTORY-IMPLEMENTATION-PLAN.md  (+59 more)
.carol/: .gitignore  1-AUDITOR-FULL-CODEBASE-AUDIT.md  1-SURGEON-discard-all-changes.md  15-COUNSELOR-THEME-SYSTEM-OVERHAUL-KICKOFF.md  15-ENGINEER-HSL-THEME-REPLACEMENT.md  15B-COUNSELOR-SEASONAL-THEME-FIXES-KICKOFF.md  2-AUDITOR-REFACTOR-VERIFICATION.md  2-COUNSELOR-GOD-OBJECT-REFACTOR-KICKOFF.md  2-COUNSELOR-GOD-OBJECT-REFACTOR.md  2-ENGINEER-GOD-OBJECT-REFACTOR.md  3-AUDITOR-LIFESTAR-AUDIT.md  3-COUNSELOR-REF003-LARGE-FILES-KICKOFF.md  3-ENGINEER-PHASE1-APP-SPLIT.md  3-ENGINEER-PHASE2-DELEGATION-ANALYSIS.md  3-ENGINEER-PHASE3-CONFIRM-SPLIT.md  3-ENGINEER-REF003-LARGE-FILES.md  3-PHASE4-STATE-SUBPACKAGE.md  3B-COUNSELOR-REDUCE-APPGO-KICKOFF.md  3B-ENGINEER-REDUCE-APPGO.md  4-COUNSELOR-AUDITOR-FIXES-KICKOFF.md  84-ANALYST-KICKOFF.md  84-SCAFFOLDER-FOOTER-CONTENT.md  84-SCAFFOLDER-FOOTER-RENAME.md  84-SCAFFOLDER-REMOVE-STATUSBARS.md  85-86-CARETAKER-CONFIG-INTEGRATION.md  85-86-INSPECTOR-AUDIT.md  85-ANALYST-KICKOFF-TIMELINE-SYNC.md  85-SCAFFOLDER-PHASE1.md  86-ANALYST-KICKOFF-CONFIG-MENU.md  86-CARETAKER-ANALYSIS.md  86-SCAFFOLDER-PHASES-2-5.md  88-INSPECTOR-AUDIT.md  ARCHITECTURAL-MANIFESTO.md  COMMIT-MESSAGE.md  INTERVIEW.md  MENU-SHORTCUTS-INVENTORY.md  PATTERNS-WRITER.md  REACTIVE-LAYOUT-PLAN.md  SESSION-LOG.md  SPRINT-LOG.md  (+4 more)
.carol/tmp/: commit_message.txt  reactive_layout_section.md
.opencode/: .gitignore  package.json
.opencode/agents/: journalist.md
Source/: Main.cpp  MainComponent.cpp  MainComponent.h  TitApp.cpp  TitApp.h  TitIdentifier.h
Source/component/: Banner.cpp  Banner.h  ConfirmDialog.cpp  ConfirmDialog.h  ConflictResolver.cpp  ConflictResolver.h  Console.cpp  Console.h  FileHistory.cpp  FileHistory.h  Footer.cpp  Footer.h  Header.cpp  Header.h  History.cpp  History.h  Menu.cpp  Menu.h  SetupWizard.cpp  SetupWizard.h
Source/menu/: MenuBuilder.cpp  MenuBuilder.h  MenuItems.h
Source/state/: TitAxis.cpp  TitAxis.h  TitState.cpp  TitState.h  TitState_flush.cpp
Source/view/: Banner.cpp  Banner.h  ConfirmDialog.cpp  ConfirmDialog.h  ConflictResolverView.cpp  ConflictResolverView.h  ConsoleView.cpp  ConsoleView.h  FileHistoryView.cpp  FileHistoryView.h  Footer.cpp  Footer.h  Header.cpp  Header.h  HistoryView.cpp  HistoryView.h  MenuView.cpp  MenuView.h  SetupWizardView.cpp  SetupWizardView.h  TitScreen.cpp  TitScreen.h
___legacy___/: .gitignore  .goreleaser.yaml  ARCHITECTURE.md  LICENSE  README.md  RELEASE_NOTES.md  release.sh
___legacy___/braille_ref/: main.go
___legacy___/scripts/: post-build.sh  reset_test_repo.sh  test_double_conflict.sh  test_stale_stash.sh  test_stale_stash_setup.sh  time_travel_changes.sh
carol/: ARCHITECT.md  ARCHITECTURE-WRITER.md  CAROL.md  JRENG-CODING-STANDARD.md  LANGUAGE.md  LICENSE  MANIFESTO.md  NAMES.md  NAMING-CONVENTION.md  ODE.md  PATTERNS-WRITER.md  PATTERNS.md  README.md  SCRIPTS.md  SPEC-WRITER.md  SPRINT-LOG.md  config.yml  install.sh  uninstall.sh
carol/roles/: auditor.md  counselor.md  engineer.md  librarian.md  machinist.md  oracle.md  pathfinder.md  researcher.md  surgeon.md  validator.md
carol/scripts/: generate-error-handler.sh  generate-validation.sh  rename-symbol.sh  restore-backup.sh  safe-edit.sh  safe-insert.sh  switch-subagent-model.sh  validate-code.sh
carol/templates/: SPRINT-LOG.md  config.yml
carol/tests/: test-generate-error-handler.sh  test-generate-validation.sh  test-safe-edit.sh  test-safe-insert.sh
cmd/tit/: input_windows.go  main.go
internal/: constants.go  version.go
internal/app/: activity_state.go  app.go  app.go.tmp  app_constructor.go  app_init.go  app_keys.go  app_update.go  app_update_cmd.go  app_update_msg.go  app_view.go  app_view_header.go  app_view_main.go  async.go  async_state.go  auto_update.go  cache_manager.go  config.go  confirm_base.go  confirm_branch.go  confirm_dialog.go  confirm_dialog_handlers.go  confirm_dialog_render.go  confirm_dirty.go  confirm_handlers.go  confirm_merge.go  confirm_rewind.go  confirm_time_travel.go  confirm_time_travel_dirty.go  confirm_time_travel_return.go  confirmation_handlers.go  confirmationhandlers.go  conflict_handlers.go  conflict_state.go  conflicthandlers.go  conflictstate.go  console_state.go  constants.go  dialog_manager.go  dialog_state.go  dirty_state.go  (+92 more)
internal/banner/: svg.go  svg_paths.go
internal/config/: config.go  stash.go
internal/git/: branch.go  config.go  dirtyop.go  environment.go  exec_base.go  exec_commit.go  exec_conflict.go  exec_push.go  exec_query.go  exec_timetravel_checkout.go  exec_timetravel_merge.go  exec_timetravel_reset.go  exec_timetravel_return.go  exec_utils.go  exec_utils_test.go  execute.go  init.go  (+11 more)
scripts/: post-build.sh  test_conflict_repo.sh  test_double_conflict_guide.sh
tests/: BrowserViewsTests.cpp  ConsoleStreamTests.cpp  DialogTests.cpp  ListPaneTests.cpp  MenuBuilderTests.cpp  MenuTests.cpp  RootViewsTests.cpp  SpinnerTests.cpp  SplitPaneTests.cpp  TestRunner.cpp  TextPaneTests.cpp  ThemeResolverTests.cpp  TitStateTests.cpp
themes/: default.xml
(+218 files in other folders)
